fixed some type and spacing bugs from last commit

--- a/source/stylesheets/_library.scss
+++ b/source/stylesheets/_library.scss
@@ -1,6 +1,7 @@
 
 .page-title {
   @extend h2;
+  @include margin-top--large;
 }
 .page-description {
   @extend p;
